Add responsive tablet
Add reponsive tablet
Add padding on main
Add padding-top on header

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header {
   padding: 0 15px;
   display: flex;
   justify-content: space-between;
+  padding-top: 5px;
 }
 nav ul {
   list-style: none;
@@ -79,7 +80,7 @@ footer li a {
   color: var(--black);
   text-decoration: none;
   padding: 3px;
-  &:hover{
+  &:hover {
     color: var(--red);
   }
 }
@@ -100,6 +101,7 @@ footer p {
 main {
   max-width: 1440px;
   margin: auto;
+  padding: 5px;
 }
 form i {
   background-color: var(--red);
@@ -197,7 +199,7 @@ aside {
   flex-wrap: wrap;
   margin-top: 40px;
 }
-.article article{
+.article article {
   position: relative;
 }
 .article a {
@@ -251,7 +253,7 @@ aside article > div {
 aside h2 {
   margin-bottom: 40px;
 }
-aside a{
+aside a {
   position: relative;
 }
 .Popu::before {
@@ -301,12 +303,21 @@ aside a{
   box-shadow: 0px 5px 100px 0px #00000040;
   border-radius: 12px;
 }
-.discoverie a:hover img{
+.discoverie a:hover img {
   scale: 1.02;
   filter: grayscale();
 }
 /* format tablette   */
-@media screen and (max-width: 1024px){
-  
-
+@media screen and (max-width: 1024px) {
+  .discoverie {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .discoverie article {
+    flex: 0 0 calc(50% - 10px);
+  }
+  #accomodation {
+    display: flex;
+    flex-direction: column;
+  }
 }
