--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ main p {
 .galerie > div,
 aside {
   background-color: var(--lightgrey);
-  padding: 40px;
+  padding: 18px;
   border-radius: 12px;
 }
 .article {
@@ -198,6 +198,7 @@ aside {
   gap: 20px;
   flex-wrap: wrap;
   margin-top: 40px;
+  flex-direction: column;
 }
 .article article {
   position: relative;
@@ -288,6 +289,8 @@ aside a {
   flex: 1;
   height: 431px;
   overflow: hidden;
+  box-shadow: 0px 5px 100px 0px #00000040;
+  border-radius: 12px;
 }
 .discoverie a p {
   text-align: center;
@@ -321,3 +324,30 @@ aside a {
     flex-direction: column;
   }
 }
+/* format telephone */
+@media screen and (max-width: 767px) {
+  header {
+    padding-top: 5px 0 0;
+    flex-direction: column;
+  }
+  .icone-position {
+    padding: 10px;
+  }
+  form input {
+    width: 100%;
+  }
+  .desktop {
+    display: none;
+  }
+  .discoverie {
+    flex-direction: column;
+  }
+  footer > div{
+padding: 15px;
+gap: 20px;
+  }
+  main p{
+    margin: 17px 0 24px;
+  }
+}
+
